include_guard()

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_LIST_DIR})

include(O2SetupTesting)
o2_setup_testing()

# add_executable(bigbag all.cxx)
# target_link_libraries(bigbag PUBLIC
# ArrowTests
# CCDB
# CPVBase
# CPVSimulation
# CommonDataFormat
# CommonUtils
# DPLUtils
# DataFlow
# DataFormatsFITT0
# DataFormatsFITV0
# DataFormatsITS
# DataFormatsITSMFT
# DataFormatsMFT
# DataFormatsMID
# DataFormatsParameters
# DataFormatsTOF
# DataFormatsTPC
# DebugGUI
# DetectorsBase
# DetectorsCommonDataFormats
# DetectorsPassive
# EMCALBase
# EMCALSimulation
# EventVisualisationBase
# EventVisualisationDataConverter
# EventVisualisationDetectors
# EventVisualisationView
# FDDBase
# FDDSimulation
# FITSimulation
# FITWorkflow
# Field
# Framework
# Generators
# GlobalTracking
# GlobalTrackingWorkflow
# HMPIDBase
# HMPIDSimulation
# Headers
# HitAnalysis
# ITSBase
# ITSMFTBase
# ITSMFTReconstruction
# ITSMFTSimulation
# ITSMFTWorkflow
# ITSReconstruction
# ITSSimulation
# ITSWorkflow
# ITStracking
# MCHBase
# MCHMappingImpl3
# MCHMappingSegContour3
# MCHPreClustering
# MCHSimulation
# MCHTracking
# MFTBase
# MFTReconstruction
# MFTSimulation
# MIDBase
# MIDClustering
# MIDSimulation
# MIDTestingSimTools
# MIDTracking
# MathUtils
# MemoryResources
# Mergers
# O2Device
# O2GPUCommon
# O2GPUTracking
# O2MessageMonitor
# O2TPCFastTransformation
# O2TPCSpaceChargeBase
# PHOSBase
# PHOSReconstruction
# PHOSSimulation
# Publishers
# ReconstructionDataFormats
# SimConfig
# SimulationDataFormat
# SpacePoints
# Steer
# T0Base
# T0Reconstruction
# T0Simulation
# TOFBase
# TOFReconstruction
# TOFSimulation
# TPCBase
# TPCCalibration
# TPCMonitor
# TPCReconstruction
# TPCSimulation
# TPCWorkflow
# TRDBase
# TRDSimulation
# TestWorkflows
# TimeFrame
# V0Base
# V0Simulation
# ZDCBase
# ZDCSimulation
# aliceHLTwrapper
# )
